fix: 対応が完全ではなかったので修正