@@ -1,7 +1,7 @@
 /*
  * jaoLicense
  *
- * Copyright (c) 2021 jao Minecraft Server
+ * Copyright (c) 2022 jao Minecraft Server
  *
  * The following license applies to this project: jaoLicense
  *
@@ -18,24 +18,30 @@ import net.dv8tion.jda.api.JDA;
 import net.dv8tion.jda.api.audit.ActionType;
 import net.dv8tion.jda.api.audit.AuditLogEntry;
 import net.dv8tion.jda.api.entities.*;
-import net.dv8tion.jda.api.events.emote.EmoteAddedEvent;
-import net.dv8tion.jda.api.events.emote.EmoteRemovedEvent;
-import net.dv8tion.jda.api.events.emote.update.EmoteUpdateNameEvent;
+import net.dv8tion.jda.api.entities.emoji.RichCustomEmoji;
+import net.dv8tion.jda.api.events.emoji.EmojiAddedEvent;
+import net.dv8tion.jda.api.events.emoji.EmojiRemovedEvent;
+import net.dv8tion.jda.api.events.emoji.update.EmojiUpdateNameEvent;
+import net.dv8tion.jda.api.events.emoji.update.EmojiUpdateRolesEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import org.jetbrains.annotations.NotNull;
 
 import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class Event_WatchEmojis extends ListenerAdapter {
     @Override
-    public void onEmoteAdded(@NotNull EmoteAddedEvent event) {
+    public void onEmojiAdded(@NotNull EmojiAddedEvent event) {
         JDA jda = event.getJDA();
         Guild guild = event.getGuild();
-        Emote emote = event.getEmote();
-        ListedEmote listedEmote = event.getGuild().retrieveEmoteById(emote.getIdLong()).complete();
-        User user = listedEmote.getUser();
+        RichCustomEmoji emote = event.getGuild().retrieveEmoji(event.getEmoji()).complete();
+        User user = emote.getOwner();
+        if (user == null) {
+            Main.getLogger().warn("EmojiAddedEvent#onEmojiAdded: User is null");
+            return;
+        }
 
         Optional<WatchEmojis.EmojiGuild> optGuild = Main.getWatchEmojis().getEmojiGuild(guild);
         if (optGuild.isEmpty()) {
@@ -60,11 +66,41 @@ public class Event_WatchEmojis extends ListenerAdapter {
     }
 
     @Override
-    public void onEmoteUpdateName(@NotNull EmoteUpdateNameEvent event) {
-        JDA jda = event.getJDA();
-        Guild guild = event.getGuild();
-        Emote emote = event.getEmote();
+    public void onEmojiUpdateName(@NotNull EmojiUpdateNameEvent event) {
+        onEmojiUpdate(
+            event.getJDA(),
+            event.getGuild(),
+            event.getEmoji(),
+            new EmojiUpdateRecord(
+                EmojiUpdateType.NAME,
+                event.getOldName(),
+                event.getNewName()
+            )
+        );
+    }
 
+    @Override
+    public void onEmojiUpdateRoles(@NotNull EmojiUpdateRolesEvent event) {
+        onEmojiUpdate(
+            event.getJDA(),
+            event.getGuild(),
+            event.getEmoji(),
+            new EmojiUpdateRecord(
+                EmojiUpdateType.ROLES,
+                rolesToString(event.getOldRoles()),
+                rolesToString(event.getNewRoles())
+            )
+        );
+    }
+
+    String rolesToString(List<Role> roles) {
+        return roles
+            .stream()
+            .map(Role::getName)
+            .collect(Collectors.joining(", "));
+    }
+
+    void onEmojiUpdate(JDA jda, Guild guild, RichCustomEmoji emote, EmojiUpdateRecord record) {
         Optional<WatchEmojis.EmojiGuild> optGuild = Main.getWatchEmojis().getEmojiGuild(guild);
         if (optGuild.isEmpty()) {
             return;
@@ -77,7 +113,7 @@ public class Event_WatchEmojis extends ListenerAdapter {
             return;
         }
 
-        List<AuditLogEntry> entries = guild.retrieveAuditLogs().type(ActionType.EMOTE_UPDATE).limit(5).complete();
+        List<AuditLogEntry> entries = guild.retrieveAuditLogs().type(ActionType.EMOJI_UPDATE).limit(5).complete();
         User user = null;
         if (!entries.isEmpty()) {
             for (AuditLogEntry entry : entries) {
@@ -88,23 +124,26 @@ public class Event_WatchEmojis extends ListenerAdapter {
             }
         }
 
-        EmbedBuilder embed = new EmbedBuilder()
-            .setTitle(String.format(":repeat:CHANGE EMOJI : %s (`:%s:` -> `:%s:`)", emote.getAsMention(), event.getOldName(), event.getNewName()))
+        EmbedBuilder builder = new EmbedBuilder()
+            .setTitle(":repeat:UPDATED EMOJI(%s) : %s".formatted(record.type.name(), emote.getAsMention()))
             .setThumbnail(emote.getImageUrl())
+            .addField("Old", record.oldValue, true)
+            .addField("New", record.newValue, true)
             .setTimestamp(Instant.now());
-        if(user != null) {
-            embed.setAuthor(user.getAsTag(), "https://discord.com/users/" + user.getId(), user.getAvatarUrl());
+
+        if (user != null) {
+            builder.setAuthor(user.getAsTag(), "https://discord.com/users/" + user.getId(), user.getAvatarUrl());
         }
-        log_channel.sendMessageEmbeds(embed.build()).queue();
+        log_channel.sendMessageEmbeds(builder.build()).queue();
 
         emojiGuild.generateEmojiList(jda);
     }
 
     @Override
-    public void onEmoteRemoved(@NotNull EmoteRemovedEvent event) {
+    public void onEmojiRemoved(@NotNull EmojiRemovedEvent event) {
         JDA jda = event.getJDA();
         Guild guild = event.getGuild();
-        Emote emote = event.getEmote();
+        RichCustomEmoji emote = event.getEmoji();
 
         Optional<WatchEmojis.EmojiGuild> optGuild = Main.getWatchEmojis().getEmojiGuild(guild);
         if (optGuild.isEmpty()) {
@@ -118,7 +157,7 @@ public class Event_WatchEmojis extends ListenerAdapter {
             return;
         }
 
-        List<AuditLogEntry> entries = guild.retrieveAuditLogs().type(ActionType.EMOTE_DELETE).limit(5).complete();
+        List<AuditLogEntry> entries = guild.retrieveAuditLogs().type(ActionType.EMOJI_DELETE).limit(5).complete();
         User user = null;
         if (!entries.isEmpty()) {
             for (AuditLogEntry entry : entries) {
@@ -133,11 +172,23 @@ public class Event_WatchEmojis extends ListenerAdapter {
             .setTitle(String.format(":wave:DELETED EMOJI : (`:%s:`)", emote.getName()))
             .setThumbnail(emote.getImageUrl())
             .setTimestamp(Instant.now());
-        if(user != null) {
+        if (user != null) {
             embed.setAuthor(user.getAsTag(), "https://discord.com/users/" + user.getId(), user.getAvatarUrl());
         }
         log_channel.sendMessageEmbeds(embed.build()).queue();
 
         emojiGuild.generateEmojiList(jda);
+    }
+
+    record EmojiUpdateRecord(
+        EmojiUpdateType type,
+        String oldValue,
+        String newValue
+    ) {
+    }
+
+    enum EmojiUpdateType {
+        NAME,
+        ROLES
     }
 }
